# hackmx

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.tf  nginx.conf.init  nginx.conf.start  start.sh  variables.tf
backend/: Cargo.toml  build.rs  diesel.toml  sample.env
backend/migrations/2024-06-28-015708_admin/: down.sql  up.sql
backend/migrations/2024-07-10-234821_base/: down.sql  up.sql
backend/page/: index.html
backend/page/_astro/: Avatar.BuE4DXBj.js  Avatar.CU1p4roM.js  Avatar.DassHt5m.js  Avatar.DfC0h1sK.js  Bug.DxevX5Z6.js  Button.BI9RPgp0.js  Campus.CABg-zRG.js  Campus.CnQoFqOo.js  Campus.D-sAXGhF.js  Campus.TkeWCPws.js  Card.DRI9mafW.js  Combination.DwtV1lt9.js  Documents.BJotRyzh.js  Documents.CcepW_hv.js  Documents.Ck561ipb.js  Documents._o4a7CFh.js  EditProfile.BJn2juTC.js  EditProfile.lFEX8Lut.js  EditProfile.p6RF6HqV.js  EditProfile.rg19jkVf.js  EventDetails.1f0pimWp.js  EventDetails.BCAoQ56K.js  EventDetails.C7rMEkBL.js  EventDetails.Cm-Mx5lQ.js  EventInfo.B-WyDoOm.js  EventInfo.By2XyBac.js  EventInfo.CyvS6k3e.js  Events.B-0wvmxf.js  Events.CfKC5QGK.js  Events.Cg7QZR-Q.js  Events.DnmLd6Dr.js  Gallery.B6PCQ37n.js  Gallery.BXjxhlOF.js  Gallery.etRiYw1h.js  Groups.19oIDYtY.js  Groups.odaciTR4.js  Input.B7MCSZ51.js  Loader.rIgyXi6R.js  Majors.BT2er-rw.js  Majors.BeChhz4B.js  (+75 more)
backend/page/dashboard/: index.html
backend/page/event/: index.html
backend/src/: app.rs  auth.rs  config.rs  database.rs  main.rs  middlewares.rs  schema.rs
backend/src/models/: fqa.rs  (+13 more)
backend/templates/: confirm.html  post.html  recover.html
(+187 files in other folders)
